---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> bool {
    #[wal_trace]
    let x: (bool, bool) = (true, true);
    true
}


error: #[wal_trace] can only be applied to values of struct type
  ┌─ testinput:2:5
  │
2 │     #[wal_trace]
  │     ^^^^^^^^^^^^ #[wal_trace] on (bool, bool)
3 │     let x: (bool, bool) = (true, true);
  │         - This has type (bool, bool)


